r5-171023/Week05/example/parser.output
   0  $accept : %entry% $end

   1  toplevel : expr SEMISEMI

   2  expr : IF expr THEN expr ELSE expr
   3       | expr EQ expr
   4       | expr LT expr
   5       | arith_expr

   6  arith_expr : arith_expr PLUS factor_expr
   7             | factor_expr

   8  factor_expr : atomic_expr

   9  atomic_expr : INT
  10              | BOOL
  11              | ID
  12              | LPAR expr RPAR

  13  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (13)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	IF  shift 6
	LPAR  shift 7
	.  error

	toplevel  goto 8
	expr  goto 9
	arith_expr  goto 10
	factor_expr  goto 11
	atomic_expr  goto 12


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	atomic_expr : INT .  (9)

	.  reduce 9


state 4
	atomic_expr : BOOL .  (10)

	.  reduce 10


state 5
	atomic_expr : ID .  (11)

	.  reduce 11


state 6
	expr : IF . expr THEN expr ELSE expr  (2)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	IF  shift 6
	LPAR  shift 7
	.  error

	expr  goto 13
	arith_expr  goto 10
	factor_expr  goto 11
	atomic_expr  goto 12


state 7
	atomic_expr : LPAR . expr RPAR  (12)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	IF  shift 6
	LPAR  shift 7
	.  error

	expr  goto 14
	arith_expr  goto 10
	factor_expr  goto 11
	atomic_expr  goto 12


state 8
	%entry% : '\001' toplevel .  (13)

	.  reduce 13


state 9
	toplevel : expr . SEMISEMI  (1)
	expr : expr . EQ expr  (3)
	expr : expr . LT expr  (4)

	EQ  shift 15
	LT  shift 16
	SEMISEMI  shift 17
	.  error


state 10
	expr : arith_expr .  (5)
	arith_expr : arith_expr . PLUS factor_expr  (6)

	PLUS  shift 18
	EQ  reduce 5
	LT  reduce 5
	THEN  reduce 5
	ELSE  reduce 5
	RPAR  reduce 5
	SEMISEMI  reduce 5


state 11
	arith_expr : factor_expr .  (7)

	.  reduce 7


state 12
	factor_expr : atomic_expr .  (8)

	.  reduce 8


state 13
	expr : IF expr . THEN expr ELSE expr  (2)
	expr : expr . EQ expr  (3)
	expr : expr . LT expr  (4)

	EQ  shift 15
	LT  shift 16
	THEN  shift 19
	.  error


state 14
	expr : expr . EQ expr  (3)
	expr : expr . LT expr  (4)
	atomic_expr : LPAR expr . RPAR  (12)

	EQ  shift 15
	LT  shift 16
	RPAR  shift 20
	.  error


state 15
	expr : expr EQ . expr  (3)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	IF  shift 6
	LPAR  shift 7
	.  error

	expr  goto 21
	arith_expr  goto 10
	factor_expr  goto 11
	atomic_expr  goto 12


state 16
	expr : expr LT . expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	IF  shift 6
	LPAR  shift 7
	.  error

	expr  goto 22
	arith_expr  goto 10
	factor_expr  goto 11
	atomic_expr  goto 12


state 17
	toplevel : expr SEMISEMI .  (1)

	.  reduce 1


state 18
	arith_expr : arith_expr PLUS . factor_expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 7
	.  error

	factor_expr  goto 23
	atomic_expr  goto 12


state 19
	expr : IF expr THEN . expr ELSE expr  (2)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	IF  shift 6
	LPAR  shift 7
	.  error

	expr  goto 24
	arith_expr  goto 10
	factor_expr  goto 11
	atomic_expr  goto 12


state 20
	atomic_expr : LPAR expr RPAR .  (12)

	.  reduce 12


21: shift/reduce conflict (shift 15, reduce 3) on EQ
21: shift/reduce conflict (shift 16, reduce 3) on LT
state 21
	expr : expr . EQ expr  (3)
	expr : expr EQ expr .  (3)
	expr : expr . LT expr  (4)

	EQ  shift 15
	LT  shift 16
	THEN  reduce 3
	ELSE  reduce 3
	RPAR  reduce 3
	SEMISEMI  reduce 3


22: shift/reduce conflict (shift 15, reduce 4) on EQ
22: shift/reduce conflict (shift 16, reduce 4) on LT
state 22
	expr : expr . EQ expr  (3)
	expr : expr . LT expr  (4)
	expr : expr LT expr .  (4)

	EQ  shift 15
	LT  shift 16
	THEN  reduce 4
	ELSE  reduce 4
	RPAR  reduce 4
	SEMISEMI  reduce 4


state 23
	arith_expr : arith_expr PLUS factor_expr .  (6)

	.  reduce 6


state 24
	expr : IF expr THEN expr . ELSE expr  (2)
	expr : expr . EQ expr  (3)
	expr : expr . LT expr  (4)

	EQ  shift 15
	LT  shift 16
	ELSE  shift 25
	.  error


state 25
	expr : IF expr THEN expr ELSE . expr  (2)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	IF  shift 6
	LPAR  shift 7
	.  error

	expr  goto 26
	arith_expr  goto 10
	factor_expr  goto 11
	atomic_expr  goto 12


26: shift/reduce conflict (shift 15, reduce 2) on EQ
26: shift/reduce conflict (shift 16, reduce 2) on LT
state 26
	expr : IF expr THEN expr ELSE expr .  (2)
	expr : expr . EQ expr  (3)
	expr : expr . LT expr  (4)

	EQ  shift 15
	LT  shift 16
	THEN  reduce 2
	ELSE  reduce 2
	RPAR  reduce 2
	SEMISEMI  reduce 2


State 21 contains 2 shift/reduce conflicts.
State 22 contains 2 shift/reduce conflicts.
State 26 contains 2 shift/reduce conflicts.


15 terminals, 7 nonterminals
14 grammar rules, 27 states
